# abuild

./: Cargo.toml  README.md  rustfmt.toml
src/: command.rs  feature.rs  lang.rs  lib.rs  module.rs  profile.rs  project.rs  target.rs  workspace.rs
src/command/: commands.rs
src/lang/: c.rs  cpp.rs  csharp.rs  rust.rs
src/module/: modules.rs
src/project/: commands.rs
src/workspace/: commands.rs
tests/: project.rs
tests/project/: main.c  main.cpp
