[package]
name = "abuild"
version = "0.0.1"
authors = ["algosul@github.com"]
homepage = "https://github.com/algosul/abuild"
repository = "https://github.com/algosul/abuild"
keywords = ["annasul", "build"]
license = "AGPL-3.0-only"
edition = "2024"
description = "Some user-friendly yet personalized tools"
documentation = "https://docs.rs/abuild"

[lib]
name = "abuild"
crate-type = ["rlib"]

[[bin]]
name = "abuild"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "*", features = ["cargo", "derive", "unicode", "string"] }
clap_complete = "*"
colored = "*"
